--- a/index.html
+++ b/index.html
@@ -3,47 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>WebStudio</title>
   </head>
 
-  <body>
-    <header>
-      <nav>
+  <body class="body">
+    <header class="header">
+      <nav class="nav">
         <a href="./index.html"> WebStudio</a>
 
-        <ul>
-          <li>
-            <a href="#">Studio</a>
+        <ul class="list nav">
+          <li class="nav-element">
+            <a class="nav-link" href="#">Studio</a>
           </li>
-          <li>
-            <a href="#">Portfolio</a>
+          <li class="nav-element">
+            <a class="nav-link" href="#">Portfolio</a>
           </li>
-          <li>
-            <a href="#">Contacts</a>
+          <li class="nav-element">
+            <a class="nav-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="contacts">
+        <ul class="list contacts-items">
+          <li class="contact contacts-mail">
+            <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contact contacts-tel">
+            <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
-    <main>
-      <section>
+
+    <main class="main">
+      <section class="main-first-section">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="main-button" type="button">Order Service</button>
       </section>
 
       <section>
         <h2>Benefits</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -77,7 +83,7 @@
 
       <section>
         <h2>Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/team/mark.jpg"
@@ -117,6 +123,41 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <ul class="list">
+          <li>
+            <img src="./images/our_portfolio/img.png" alt="Banking App">
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/our_portfolio/img-1.png" alt="Cashless Payment">
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/our_portfolio/img-2.png" alt="Meditation App">
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/our_portfolio/img-3.png" alt="Taxi Service">
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/our_portfolio/img-4.png" alt="Screen Illustrations">
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/our_portfolio/img-5.png" alt="Online Courses">
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
