--- a/index.html
+++ b/index.html
@@ -3,28 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>WebStudio</title>
   </head>
 
   <body class="body">
     <header class="header">
       <nav class="nav">
-        <a href="./index.html"> WebStudio</a>
+        <a href="./index.html" class="logo">
+          Web<span class="logo-header">Studio</span></a
+        >
 
         <ul class="list nav">
           <li class="nav-element">
-            <a class="nav-link" href="#">Studio</a>
+            <a class="header-link nav-link" href="#">Studio</a>
           </li>
           <li class="nav-element">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="header-link nav-link" href="#">Portfolio</a>
           </li>
           <li class="nav-element">
-            <a class="nav-link" href="#">Contacts</a>
+            <a class="header-link nav-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -32,48 +46,52 @@
       <address class="contacts">
         <ul class="list contacts-items">
           <li class="contact contacts-mail">
-            <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-link contact-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact contacts-tel">
-            <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="header-link contact-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
     <main class="main">
-      <section class="main-first-section">
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="section main-section">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="main-button" type="button">Order Service</button>
       </section>
 
-      <section>
-        <h2>Benefits</h2>
+      <section class="section benefits-section">
+        <h2 class="section-title">Benefits</h2>
         <ul class="list">
-          <li>
-            <h3>Strategy</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="item-title">Strategy</h3>
+            <p class="item-content">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="item-title">Punctuality</h3>
+            <p class="item-content">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="item-title">Diligence</h3>
+            <p class="item-content">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="item-title">Technologies</h3>
+            <p class="item-content">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -81,90 +99,123 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
+      <section class="section team-section">
+        <h2 class="section-title">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="item-team">
             <img
               src="./images/team/mark.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="item-title">Mark Guerrero</h3>
+            <p class="item-content">Product Designer</p>
           </li>
-          <li>
+          <li class="item-team">
             <img
               src="./images/team/tom.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="item-title">Tom Ford</h3>
+            <p class="item-content">Frontend Developer</p>
           </li>
-          <li>
+          <li class="item-team">
             <img
               src="./images/team/camila.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="item-title">Camila Garcia</h3>
+            <p class="item-content">Marketing</p>
           </li>
-          <li>
+          <li class="item-team">
             <img
               src="./images/team/daniel.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="item-title">Daniel Wilson</h3>
+            <p class="item-content">UI Designer</p>
           </li>
         </ul>
       </section>
 
-      <section>
+      <section class="section portfolio-section">
+        <h2 class="section-title">Our Portfolio</h2>
         <ul class="list">
-          <li>
-            <img src="./images/our_portfolio/img.png" alt="Banking App">
-            <h3>Banking App</h3>
-            <p>App</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img.png"
+              alt="Banking App"
+              width="360px"
+              height="300px"
+            />
+            <h3 class="item-title">Banking App</h3>
+            <p class="item-content">App</p>
           </li>
-          <li>
-            <img src="./images/our_portfolio/img-1.png" alt="Cashless Payment">
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-1.png"
+              alt="Cashless Payment"
+              width="360px"
+              height="300px"
+            />
+            <h3 class="item-title">Cashless Payment</h3>
+            <p class="item-content">Marketing</p>
           </li>
-          <li>
-            <img src="./images/our_portfolio/img-2.png" alt="Meditation App">
-            <h3>Meditation App</h3>
-            <p>App</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-2.png"
+              alt="Meditation App"
+              width="360px"
+              height="300px"
+            />
+            <h3 class="item-title">Meditation App</h3>
+            <p class="item-content">App</p>
           </li>
-          <li>
-            <img src="./images/our_portfolio/img-3.png" alt="Taxi Service">
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-3.png"
+              alt="Taxi Service"
+              width="360px"
+              height="300px"
+            />
+            <h3 class="item-title">Taxi Service</h3>
+            <p class="item-content">Marketing</p>
           </li>
-          <li>
-            <img src="./images/our_portfolio/img-4.png" alt="Screen Illustrations">
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-4.png"
+              alt="Screen Illustrations"
+              width="360px"
+              height="300px"
+            />
+            <h3 class="item-title">Screen Illustrations</h3>
+            <p class="item-content">Design</p>
           </li>
-          <li>
-            <img src="./images/our_portfolio/img-5.png" alt="Online Courses">
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-5.png"
+              alt="Online Courses"
+              width="360px"
+              height="300px"
+            />
+            <h3 class="item-title">Online Courses</h3>
+            <p class="item-content">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html"> WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo">
+        Web<span class="logo-footer">Studio</span></a
+      >
+      <p class="footer-content">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
