--- a/index.html
+++ b/index.html
@@ -25,20 +25,19 @@
 
   <body class="body">
     <header class="header">
+      <a href="./index.html" class="logo">
+        Web<span class="logo-header">Studio</span></a
+      >
       <nav class="nav">
-        <a href="./index.html" class="logo">
-          Web<span class="logo-header">Studio</span></a
-        >
-
         <ul class="list nav">
           <li class="nav-element">
-            <a class="header-link nav-link" href="#">Studio</a>
+            <a class="header-link nav-link" href="./index.html">Studio</a>
           </li>
           <li class="nav-element">
-            <a class="header-link nav-link" href="#">Portfolio</a>
+            <a class="header-link nav-link" href="">Portfolio</a>
           </li>
           <li class="nav-element">
-            <a class="header-link nav-link" href="#">Contacts</a>
+            <a class="header-link nav-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -150,60 +149,60 @@
         <ul class="list">
           <li class="portfolio-item">
             <img
-              src="./images/portfolio/img.png"
+              src="./images/portfolio/img_1.jpg"
               alt="Banking App"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
             />
             <h3 class="item-title">Banking App</h3>
             <p class="item-content">App</p>
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/portfolio/img-1.png"
+              src="./images/portfolio/img_3.jpg"
               alt="Cashless Payment"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
             />
             <h3 class="item-title">Cashless Payment</h3>
             <p class="item-content">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/portfolio/img-2.png"
+              src="./images/portfolio/img_4.jpg"
               alt="Meditation App"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
             />
             <h3 class="item-title">Meditation App</h3>
             <p class="item-content">App</p>
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/portfolio/img-3.png"
+              src="./images/portfolio/img_4.jpg"
               alt="Taxi Service"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
             />
             <h3 class="item-title">Taxi Service</h3>
             <p class="item-content">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/portfolio/img-4.png"
+              src="./images/portfolio/img_5.jpg"
               alt="Screen Illustrations"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
             />
             <h3 class="item-title">Screen Illustrations</h3>
             <p class="item-content">Design</p>
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/portfolio/img-5.png"
+              src="./images/portfolio/img_6.jpg"
               alt="Online Courses"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
             />
             <h3 class="item-title">Online Courses</h3>
             <p class="item-content">Marketing</p>
