--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 
   <body class="body">
     <header class="header">
-      <a href="./index.html" class="logo">
-        Web<span class="logo-header">Studio</span></a
-      >
       <nav class="nav">
+        <a href="./index.html" class="logo">
+          Web<span class="logo-header">Studio</span>
+        </a>
+
         <ul class="list nav">
           <li class="nav-element">
-            <a class="header-link nav-link" href="./index.html">Studio</a>
+            <a class="header-link nav-link" href="">Studio</a>
           </li>
           <li class="nav-element">
             <a class="header-link nav-link" href="">Portfolio</a>
