--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <ul class="list nav">
           <li class="nav-element">
-            <a class="header-link nav-link" href="">Studio</a>
+            <a class="header-link nav-link" href="./index.html">Studio</a>
           </li>
           <li class="nav-element">
             <a class="header-link nav-link" href="">Portfolio</a>
